--- a/finantial/client/package.json
+++ b/finantial/client/package.json
@@ -9,6 +9,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "react-tabs": "^3.0.0",
     "react-treebeard": "^3.2.3"
   },
   "scripts": {
@@ -25,5 +26,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "eslint": "^5.16.0"
+  }
 }
